--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "typewriter-effect": "^2.19.0"
+    "swiper": "^9.0.5",
+    "typewriter-effect": "^2.19.0",
+    "@splidejs/react-splide": "^0.7.8",
+    "@splidejs/splide": "^4.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
